# dify

./: .gitignore  .mcp.json  AGENTS.md
a2a-gateway/: .env.example  .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml
a2a-gateway/models/: a2a.py  dify.py
a2a-gateway/routers/: chat.py  tasks.py
a2a-gateway/services/: dify_client.py  session_manager.py  task_manager.py  task_store.py  translator.py
a2a-gateway/tests/: README.md  conftest.py  run_tests.sh
a2a-gateway/tests/integration/: test_e2e.py  test_task_api.py  test_task_api_edge_cases.py
a2a-gateway/tests/unit/: test_models.py  test_task_manager.py  test_task_store.py  test_translator.py
docker/: docker-compose-template.yaml  docker-compose.yaml
docker/volumes/sandbox/conf/: config.yaml
